--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -341,6 +341,15 @@ nav .search-form button i {
     background-repeat: no-repeat;
     background-size: cover;
 }
+.page-header-instructor{
+    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../../../assets/img/home3.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 70vh;
+    background-size: cover;
+    
+}
+
 
 .page-header-inner {
     background: rgba(15, 23, 43, .7);
