create course from instructor

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,7 +58,9 @@ h6 {
     padding: 20px;
   }
 }
-
+/* #sub{
+  display: none;
+} */
 /*--------------------------------------------------------------
 # Page Title
 --------------------------------------------------------------*/
