--- a/public/assets/frontend/css/style.css
+++ b/public/assets/frontend/css/style.css
@@ -336,7 +336,7 @@ nav .search-form button i {
   }
 
 .page-header {
-    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7));
+    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/carousel-1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
